--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>How to copy Medium in 10 minutes</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div class="banner">
